// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformEnduserConsent tests should add customized scope elements to formbag 1`] = `
Object {
  "data": Object {
    "consent.scopes.custom1": true,
    "consent.scopes.custom2": true,
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      Object {
        "key": "consent.scopes.custom1",
        "options": Object {
          "inputMeta": Object {
            "mutable": false,
            "name": "consent.scopes.custom1",
            "type": "boolean",
          },
        },
        "translations": Array [
          Object {
            "i18nKey": "consent.scopes.custom1.label",
            "name": "label",
            "noTranslate": true,
            "value": "View your custom info",
          },
          Object {
            "i18nKey": "consent.scopes.custom1.desc",
            "name": "description",
            "noTranslate": true,
            "value": "This will allow the app to view your custom info",
          },
        ],
        "type": "Field",
      },
      Object {
        "key": "consent.scopes.custom2",
        "options": Object {
          "inputMeta": Object {
            "mutable": false,
            "name": "consent.scopes.custom2",
            "type": "boolean",
          },
        },
        "translations": Array [
          Object {
            "i18nKey": "consent.scopes.custom2.label",
            "name": "label",
            "noTranslate": true,
            "value": "View your custom 2",
          },
          Object {
            "i18nKey": "consent.scopes.custom2.desc",
            "name": "description",
            "noTranslate": true,
            "value": undefined,
          },
        ],
        "type": "Field",
      },
      Object {
        "options": Object {
          "dataSe": "terms-of-service",
          "href": "https://okta1.com/tos",
          "label": "consent.required.termsOfService",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      Object {
        "options": Object {
          "dataSe": "privacy-policy",
          "href": "https://okta1.com/privacypolicy",
          "label": "consent.required.privacyPolicy",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      Object {
        "label": "consent.required.consentButton",
        "options": Object {
          "actionParams": Object {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      Object {
        "label": "oform.cancel",
        "options": Object {
          "actionParams": Object {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformEnduserConsent tests should add non-customized scope elements to formbag 1`] = `
Object {
  "data": Object {
    "consent.scopes.email": true,
    "consent.scopes.phone": true,
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      Object {
        "key": "consent.scopes.email",
        "options": Object {
          "inputMeta": Object {
            "mutable": false,
            "name": "consent.scopes.email",
            "type": "boolean",
          },
        },
        "translations": Array [
          Object {
            "i18nKey": "consent.scopes.email.label",
            "name": "label",
            "noTranslate": false,
            "value": "consent.scopes.email.label",
          },
          Object {
            "i18nKey": "consent.scopes.email.desc",
            "name": "description",
            "noTranslate": false,
            "value": "consent.scopes.email.desc",
          },
        ],
        "type": "Field",
      },
      Object {
        "key": "consent.scopes.phone",
        "options": Object {
          "inputMeta": Object {
            "mutable": false,
            "name": "consent.scopes.phone",
            "type": "boolean",
          },
        },
        "translations": Array [
          Object {
            "i18nKey": "consent.scopes.phone.label",
            "name": "label",
            "noTranslate": false,
            "value": "consent.scopes.phone.label",
          },
          Object {
            "i18nKey": "consent.scopes.phone.desc",
            "name": "description",
            "noTranslate": false,
            "value": "consent.scopes.phone.desc",
          },
        ],
        "type": "Field",
      },
      Object {
        "options": Object {
          "dataSe": "terms-of-service",
          "href": "https://okta1.com/tos",
          "label": "consent.required.termsOfService",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      Object {
        "options": Object {
          "dataSe": "privacy-policy",
          "href": "https://okta1.com/privacypolicy",
          "label": "consent.required.privacyPolicy",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      Object {
        "label": "consent.required.consentButton",
        "options": Object {
          "actionParams": Object {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      Object {
        "label": "oform.cancel",
        "options": Object {
          "actionParams": Object {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformEnduserConsent tests should not add scopes when none exist in the transaction 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "dataSe": "terms-of-service",
          "href": "https://okta1.com/tos",
          "label": "consent.required.termsOfService",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      Object {
        "options": Object {
          "dataSe": "privacy-policy",
          "href": "https://okta1.com/privacypolicy",
          "label": "consent.required.privacyPolicy",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      Object {
        "label": "consent.required.consentButton",
        "options": Object {
          "actionParams": Object {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      Object {
        "label": "oform.cancel",
        "options": Object {
          "actionParams": Object {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "enduser-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
